[gd_scene load_steps=13 format=3 uid="uid://dl66oqjvna0sr"]

[ext_resource type="SpriteFrames" uid="uid://dxvbxade2ytvo" path="res://Main/HUD/MainMenu/menu_texture_animations.tres" id="1_74q5r"]
[ext_resource type="FontFile" uid="uid://cmattar8x5bbu" path="res://Assets/Fonts/MicroStyle.ttf" id="1_a1tqp"]
[ext_resource type="Script" uid="uid://bqh4dsf5vcpbd" path="res://Main/HUD/MainMenu/main_menu.gd" id="1_tijen"]
[ext_resource type="Texture2D" uid="uid://bfb7ofcfgrw2j" path="res://Assets/HUD/Logo/logo_wave.png" id="3_omlsm"]
[ext_resource type="PackedScene" uid="uid://bciylw13k2ygu" path="res://Main/HUD/ScreenLayers/VFX_screen_layer.tscn" id="5_fsytv"]

[sub_resource type="Animation" id="Animation_6rtr1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/buttonControl/startButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/buttonControl/startButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/Control/preferencesButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/Control/preferencesButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/Control2/exitButton:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/Control2/exitButton:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("logoControl:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(288, 148)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("contentMargin/inputIntroMargin/inputIntroLabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("contentMargin/mainMenuMargin:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("contentMargin/inputIntroMargin:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rgov0"]
resource_name = "main_menu_show"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/buttonControl/startButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 1.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(48, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/buttonControl/startButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 1.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/Control/preferencesButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9, 1.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-48, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/Control/preferencesButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.9, 1.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/Control2/exitButton:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.1, 1.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(48, 0), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("contentMargin/mainMenuMargin/VBoxContainer/Control2/exitButton:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("logoControl:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(288, 148), Vector2(288, 72)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("contentMargin/inputIntroMargin/inputIntroLabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("contentMargin/mainMenuMargin:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fsytv"]
resource_name = "waiting_input"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("contentMargin/inputIntroMargin:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("contentMargin/mainMenuMargin:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("logoControl:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(288, 148)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("contentMargin/inputIntroMargin/inputIntroLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjwaj"]
_data = {
&"RESET": SubResource("Animation_6rtr1"),
&"main_menu_show": SubResource("Animation_rgov0"),
&"waiting_input": SubResource("Animation_fsytv")
}

[sub_resource type="Animation" id="Animation_sjdh7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaveTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaveTexture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swordTexture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("swordTexture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("rippleTexture:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("decorationsTexture:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("QuestLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("rippleTexture:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(288, 148)]
}

[sub_resource type="Animation" id="Animation_n50ia"]
resource_name = "logo_intro"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaveTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaveTexture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swordTexture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, -64), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("swordTexture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("decorationsTexture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["decoration_animation", 1.0, false],
"method": &"play"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("rippleTexture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"ripple_animation", 1.0, false],
"method": &"play"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("rippleTexture:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("swordTexture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"sword_animation", 1.0, false],
"method": &"play"
}]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("decorationsTexture:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("QuestLabel:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("rippleTexture:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("..")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"intro_trigger"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7sb0j"]
_data = {
&"RESET": SubResource("Animation_sjdh7"),
&"logo_intro": SubResource("Animation_n50ia")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tijen")
metadata/_edit_vertical_guides_ = [320.0]
metadata/_edit_horizontal_guides_ = [360.0, 180.0]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_wjwaj")
}

[node name="contentMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="background" type="ColorRect" parent="contentMargin"]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="inputIntroMargin" type="MarginContainer" parent="contentMargin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 48

[node name="inputIntroLabel" type="RichTextLabel" parent="contentMargin/inputIntroMargin"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
bbcode_enabled = true
text = "[pulse]presiona para continuar"
fit_content = true
horizontal_alignment = 1

[node name="mainMenuMargin" type="MarginContainer" parent="contentMargin"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="contentMargin/mainMenuMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="buttonControl" type="Control" parent="contentMargin/mainMenuMargin/VBoxContainer"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2

[node name="startButton" type="Button" parent="contentMargin/mainMenuMargin/VBoxContainer/buttonControl"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
offset_right = 256.0
offset_bottom = 32.0
size_flags_horizontal = 4
text = "Comenzar aventura"

[node name="Control" type="Control" parent="contentMargin/mainMenuMargin/VBoxContainer"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2

[node name="preferencesButton" type="Button" parent="contentMargin/mainMenuMargin/VBoxContainer/Control"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
offset_right = 256.0
offset_bottom = 32.0
size_flags_horizontal = 4
text = "Preferencias"

[node name="Control2" type="Control" parent="contentMargin/mainMenuMargin/VBoxContainer"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2

[node name="exitButton" type="Button" parent="contentMargin/mainMenuMargin/VBoxContainer/Control2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
offset_right = 256.0
offset_bottom = 32.0
size_flags_horizontal = 4
text = "Salir"

[node name="logoControl" type="Control" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
anchors_preset = 0
offset_left = 288.0
offset_top = 148.0
offset_right = 352.0
offset_bottom = 212.0
scale = Vector2(3, 3)
pivot_offset = Vector2(32, 32)
mouse_filter = 2

[node name="LogoAnimationPlayer" type="AnimationPlayer" parent="logoControl"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_7sb0j")
}
autoplay = "logo_intro"

[node name="Background" type="ColorRect" parent="logoControl"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="rippleTexture" type="AnimatedSprite2D" parent="logoControl"]
sprite_frames = ExtResource("1_74q5r")
animation = &"ripple_animation"
frame = 1
centered = false

[node name="swordTexture" type="AnimatedSprite2D" parent="logoControl"]
sprite_frames = ExtResource("1_74q5r")
animation = &"sword_animation"
centered = false

[node name="decorationsTexture" type="AnimatedSprite2D" parent="logoControl"]
sprite_frames = ExtResource("1_74q5r")
animation = &"decoration_animation"
frame = 8
centered = false

[node name="WaveTexture" type="TextureRect" parent="logoControl"]
layout_mode = 0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 72.0
mouse_filter = 2
texture = ExtResource("3_omlsm")

[node name="QuestLabel" type="RichTextLabel" parent="logoControl"]
clip_contents = false
layout_mode = 0
offset_left = 23.0
offset_top = 32.0
offset_right = 45.0
offset_bottom = 46.0
mouse_filter = 2
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("1_a1tqp")
bbcode_enabled = true
text = "[wave amp=20.0 freq=5.0 connected=0]Quest"
fit_content = true
scroll_active = false

[node name="VFXScreenLayer" parent="." instance=ExtResource("5_fsytv")]

[node name="debugMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="debugMenuStateLabel" type="Label" parent="debugMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "dasdasdas"

[connection signal="pressed" from="contentMargin/mainMenuMargin/VBoxContainer/buttonControl/startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="contentMargin/mainMenuMargin/VBoxContainer/Control/preferencesButton" to="." method="_on_preferences_button_pressed"]
[connection signal="pressed" from="contentMargin/mainMenuMargin/VBoxContainer/Control2/exitButton" to="." method="_on_exit_button_pressed"]
[connection signal="animation_finished" from="logoControl/LogoAnimationPlayer" to="." method="_on_logo_animation_player_animation_finished"]
